2008-04-03  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/server.c: a lot of changes to have separate connection
	management.

	* backends/xim/protocol.[ch]: new.

	* backends/xim/utils.c (xim_lookup_atom): more sanity check.
	(xim_ximattr_free): new.
	(xim_xicattr_free): new.
	(xim_ext_free): new.
	(xim_ximattribute_free): new.
	(xim_xicattribute_free): new.
	(xim_strconvtext_free): new.
	(xim_protocol_name): new.

	* backends/xim/connection.c: a lot of changes to have separate class
	for protocol processor.

2008-04-02  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-restart.c (main): Fix a typo.

2008-03-27  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_stop_im): send empty string
	and "none" for XIM instead of NULL.

	* imsettings/imsettings-request.c (imsettings_request_change_to):
	disallow to get a NULL as module because DBus doesn't support sending
	NULL as string.
	(imsettings_request_change_to_with_signal): likewise.

2008-03-19  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/main.c: Add a missing header file.

	* backends/xim/connection.c (xim_connection_forward_event):
	Fix a segfault when the major-opcode is more than expects.

	* imsettings/imsettings-request.c (imsettings_request_change_to_with_signal):
	Fix a typo.

	* src/factory.c (imsettings_manager_real_start_im): send a change to
	XIM server too.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_change_to_with_signal):
	new to send a ChangeTo signal. particularly for XIM server.

	* imsettings/backends/Makefile.am: Add a rule to build xim support.

	* imsettings/backends/xim/connection.[ch]:
	* imsettings/backends/xim/main.c:
	* imsettings/backends/xim/server.[ch]:
	* imsettings/backends/xim/utils.[ch]:
	* imsettings/backends/xim/Makefile.am: Initial commit to support XIM.

	* imsettings/imsettings/imsettings.h: Add dbus interface for XIM.
