@@ -61,8 +61,6 @@ XIMServer *xim_server_new           (Display     *dpy,
 gboolean   xim_server_is_initialized(XIMServer   *server);
 gboolean   xim_server_setup         (XIMServer   *server,
 				     gboolean     replace);
-void       xim_server_freeze_event  (XIMServer   *server);
-void       xim_server_thaw_event    (XIMServer   *server);
 
 
 G_END_DECLS
